# yolo-gen

./: .gitignore  LICENSE  README.md  predict.py  pyproject.toml  requirements.txt  train.py  visualize.py
configs/: car_detection.yaml  default.yaml  weapon_detection.yaml
data/car_detection/: dataset.yaml
data/weapon_detection/: dataset.yaml
examples/: compare_vlm.ipynb  demo.ipynb
yologen/: __init__.py  cli.py
yologen/core/: __init__.py  predictor.py  trainer.py  vlm_trainer.py
yologen/data/: __init__.py  vlm_dataset.py
yologen/models/: __init__.py
yologen/models/vlm/: __init__.py  qwen.py
yologen/utils/: __init__.py  visualization.py
